--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.8.5",
     "vue": "^3.2.13",
+    "vue-data-ui": "^2.3.25",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
