--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "dplayer": "^1.27.1",
     "element-plus": "^2.8.5",
     "vue": "^3.2.13",
     "vue-data-ui": "^2.3.25",
