--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.13",
     "vue-data-ui": "^2.3.25",
     "vue-router": "^4.0.3",
+    "vue3-puzzle-vcode": "^1.1.7",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
@@ -24,7 +25,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "axios": "^0.18.1",
-    "sass": "^1.32.7",
+    "sass": "^1.81.0",
     "sass-loader": "^12.0.0",
     "vue-cli-plugin-axios": "^0.0.4"
   }
